--- a/app/templates/forum/topic.html
+++ b/app/templates/forum/topic.html
@@ -14,7 +14,7 @@
                 </a>
             </li>
             <li class="breadcrumb-item">
-                <a href="{{ url_for('forum.category', category=topic.category) }}" class="text-decoration-none">
+                <a href="{{ url_for('forum.category', category_name=topic.category) }}" class="text-decoration-none">
                     {{ topic.category_display_name }}
                 </a>
             </li>
