--- a/app/templates/analysis/tradingview.html
+++ b/app/templates/analysis/tradingview.html
@@ -2,6 +2,11 @@
 
 {% block title %}TradingView Charts - {{ symbol if symbol else 'Aksjeradar' }}{% endblock %}
 
+{% block head %}
+<!-- TradingView Chart Library -->
+<script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+{% endblock %}
+
 {% block content %}
 <div class="container-fluid mt-4">
     {% include 'analysis/_menu.html' %}
