--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -445,19 +445,19 @@
                             <li><a class="dropdown-item" href="{{ url_for('forum.index') }}">
                                 <i class="bi bi-house"></i> Hovedside
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category='enkelaksjer') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category_name='enkelaksjer') }}">
                                 <i class="bi bi-graph-up"></i> Enkeltaksjer
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category='investeringsstrategier') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category_name='investeringsstrategier') }}">
                                 <i class="bi bi-lightbulb"></i> Investeringsstrategier
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category='teknisk-analyse') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category_name='teknisk-analyse') }}">
                                 <i class="bi bi-bar-chart"></i> Teknisk Analyse
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category='markedsnyheter') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category_name='markedsnyheter') }}">
                                 <i class="bi bi-newspaper"></i> Markedsnyheter
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category='begynnerhjornet') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('forum.category', category_name='begynnerhjornet') }}">
                                 <i class="bi bi-mortarboard"></i> Begynnerhjørnet
                             </a></li>
                         </ul>
