--- a/app/templates/forum/create_topic.html
+++ b/app/templates/forum/create_topic.html
@@ -15,7 +15,7 @@
             </li>
             {% if category %}
             <li class="breadcrumb-item">
-                <a href="{{ url_for('forum.category', category=category) }}" class="text-decoration-none">
+                <a href="{{ url_for('forum.category', category_name=category) }}" class="text-decoration-none">
                     {{ category_info.display_name }}
                 </a>
             </li>
@@ -174,7 +174,7 @@
                             </div>
                             
                             <div>
-                                <a href="{{ url_for('forum.category', category=category) if category else url_for('forum.index') }}" 
+                                <a href="{{ url_for('forum.category', category_name=category) if category else url_for('forum.index') }}" 
                                    class="btn btn-secondary me-2">
                                     <i class="bi bi-x-circle me-1"></i>Avbryt
                                 </a>
