--- a/app/templates/forum/search.html
+++ b/app/templates/forum/search.html
@@ -388,7 +388,7 @@
                             <h6>Kategorier</h6>
                             <div class="list-group list-group-flush">
                                 {% for cat_key, cat_info in forum_categories.items() %}
-                                <a href="{{ url_for('forum.category', category=cat_key) }}" 
+                                <a href="{{ url_for('forum.category', category_name=cat_key) }}" 
                                    class="list-group-item list-group-item-action border-0 px-0">
                                     <i class="bi bi-{{ cat_info.icon }} me-2"></i>{{ cat_info.display_name }}
                                 </a>
