--- a/app/templates/stocks/details.html
+++ b/app/templates/stocks/details.html
@@ -262,8 +262,8 @@
                         <a href="{{ url_for('analysis.ai_analysis', ticker=stock.symbol) }}" class="btn btn-info">
                             <i class="fas fa-robot me-1"></i>Vis AI analyse
                         </a>
-                        <a href="{{ url_for('analysis.technical_analysis', symbol=stock.symbol) }}" class="btn btn-outline-secondary">
-                            <i class="fas fa-chart-line me-1"></i>Teknisk Analyse
+                        <a href="{{ url_for('analysis.technical', ticker=stock.symbol) }}" class="btn btn-outline-secondary">
+                            <i class="fas fa-chart-line me-1"></i>Full teknisk analyse
                         </a>
                     </div>
                 </div>
